<resources>
    <string name="app_name">AirBook</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="login">登\t录</string>
    <string name="actionbar">actionbar</string>
    <string name="company_information">沈阳艾尔时代科技发展有限公司</string>
    <string name="bookname">牧羊少年奇妙之旅</string>
    <string name="writer">保罗·柯艾略</string>
    <string name="shu">|</string>
    <string name="press">南海出版社</string>
    <string name="yq">借书要求:</string>
    <string name="yq1">●不可转借</string>
    <string name="yq2">●不可折页</string>
    <string name="yq3">●不可标注</string>
    <string name="js">内容简述:</string>
    <string name="data">牧羊少年圣地亚哥接连两次做了同一个梦,梦见埃及金字塔附近藏有宝藏,少年卖掉羊群,经历千辛万苦一路向南,跨海来到非洲,穿越\'死亡之海\'......</string>
    <string name="ev_query">点击查询员工信息</string>
    <string name="btn_ok">确认借书</string>
    <string name="status">未借</string>
    <string name="state">借阅状态:</string>
    <string name="search">search</string>
    <string name="iv_title">iv_title</string>
    <string name="textView4">图书借阅</string>
    <string name="book_borrowing">book_borrowing</string>
    <string name="data2">书是随时在你近旁的顾问</string>
    <string name="data1">敞开自己的心扉去感悟每一段文字,让心灵在路上.</string>
    <string name="textView42">归还图书</string>
    <string name="textView32">Return books</string>
    <string name="data3">图书共享,畅快阅读.</string>
    <string name="textView43">查询图书</string>
    <string name="inquiry_books">Inquiry books</string>
    <string name="data5">精确搜索,更懂你.</string>
    <string name="btn_oks">确认还书</string>
    <string name="tv_book_name">书名</string>
    <string name="tv_book_category">类别</string>
    <string name="tv_book_number">编号</string>
    <string name="tv_book_person">借阅人</string>
    <string name="tv1">已借出</string>
    <string name="tv2">未借出</string>
    <string name="cwgl">财务管理</string>
    <string name="cggl">采购管理</string>
    <string name="ccgl">仓储管理</string>
    <string name="cqxg">产品相关</string>
    <string name="jxzz">机械制造</string>
    <string name="lcgl">流程管理</string>
    <string name="qygl">企业管理</string>
    <string name="rlzy">人力资源</string>
    <string name="yjxg">软件相关</string>
    <string name="scgl">生产管理</string>
    <string name="zlgl">质量管理</string>
    <string name="qywh">企业文化</string>
    <string name="glzd">管理制度</string>
    <string name="qa">全案</string>
    <string name="qt">其它</string>
    <string name="returns">返回</string>
</resources>
