<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="3dp"
            android:paddingRight="3dp">

            <ImageView
                android:id="@+id/imageView_f"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:src="@drawable/icon_book" />

            <TextView
                android:id="@+id/tv_book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView_f"
                android:layout_marginRight="20dp"
                android:layout_toEndOf="@+id/imageView_f"
                android:layout_toRightOf="@+id/imageView_f"
                android:maxLines="2"
                android:text="@string/tv_book_name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_book_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView_f"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:text="@string/tv_book_category"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_book_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_book_person"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toLeftOf="@+id/tv_book_person"
                android:layout_toStartOf="@+id/tv_book_person"
                android:text="@string/tv_book_number"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_book_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_book_category"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_toLeftOf="@+id/tv_book_category"
                android:layout_toStartOf="@+id/tv_book_category"
                android:text="@string/tv_book_person"
                android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#eeeeef" />
    </RelativeLayout>
</LinearLayout>